# momo

./: CMakeLists.txt  batch_learn.sh  package.xml  results.txt  run.launch  test.launch
config/: context_params.yaml  demo_params.yaml  parameters.yaml  teleop_params.yaml
launch/: cross_enemy.launch  cross_friendly.launch  features.launch  follow_enemy.launch  follow_friendly.launch  helbing0.launch  run.launch  scene1.launch  scene2.launch  scene3.launch  teleop.launch  test.launch
opencl/: anisotropic.cl  computeCosts.cl  dijkstra.cl  forwardBackward.cl  helbing.cl  henryCummulated.cl  icra14.cl  kimlike.cl  smoke0.cl  test.cl
python/momo/: __init__.py  convert.py  irl_assembler.py
python/momo/features/: __init__.py  compute_costs.py
python/momo/features/anisotropic/: __common__.py  compute_feature.py  compute_features.py
python/momo/features/constant/: __common__.py  compute_feature.py  compute_features.py
python/momo/features/helbing/: __common__.py  compute_feature.py  compute_features.py
python/momo/features/icra14/: __common__.py  compute_feature.py  compute_features.py
python/momo/features/kimlike/: compute_feature.py  compute_features.py
python/momo/features/smoke0/: compute_features.py
python/momo/features/test/: __init__.py  compute_features.py
python/momo/irl/planning/: dijkstra.py  forward_backward.py
python/momo/learning/abbeel/: learn.py
python/momo/opencl/: util.py
python/momo/planning/: dijkstra.py  forward_backward.py
sandbox/: test_opencl
scripts/: irl_features.py  momo_ros.py  talker.py
(+3 files in other folders)
