<?xml version="1.0"?>
<package>
  <name>momo</name>
  <version>0.0.0</version>
  <description>IRL Based Motion Modeling and planning</description>


  <maintainer email="vasquezg@todo.todo">vasquezg</maintainer>

  <license>TODO</license>

 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pedsim_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pedsim_msgs</run_depend>
  
</package>
